--- a/maehara.bib
+++ b/maehara.bib
@@ -6,7 +6,7 @@
  year = {2019},
  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
 }
-@misc{fukuchi2019pretending,
+@article{fukuchi2019pretending,
  author = {Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
  title = {Pretending Fair Decisions via Stealthily Biased Sampling},
  journal = {CoRR},
@@ -14,7 +14,7 @@
  year = {2019},
  url = {http://arxiv.org/abs/1901.08291},
 }
-@misc{maehara2019optimal,
+@article{maehara2019optimal,
  author = {Takanori Maehara and Kazutoshi Ando},
  title = {Optimal Algorithm to Reconstruct a Tree from a Subtree Distance},
  journal = {CoRR},
@@ -30,17 +30,12 @@
  number = {1},
  pages = {199--219},
  year = {2018},
- month = {April},
- day = {15},
+ month = {15, April},
  url = {https://doi.org/10.1007/s10107-017-1139-2},
 }
-@article{DBLP:journals/netsci/TakaguchiMKT18,
- author = {Taro Takaguchi and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi and
- Masashi Toyoda},
- title = {Existence of outsiders as a characteristic of online communication
- networks},
+@article{takaguchi2018existence,
+ author = {Taro Takaguchi and Takanori Maehara and Ken{-}ichi Kawarabayashi and Masashi Toyoda},
+ title = {Existence of outsiders as a characteristic of online communication networks},
  journal = {Network Science},
  volume = {6},
  number = {4},
@@ -48,90 +43,65 @@
  year = {2018},
  url = {https://doi.org/10.1017/nws.2018.17},
 }
-@article{DBLP:journals/tkdd/BollegalaAMK18,
+@article{bollegala2018classinet,
  author = {Danushka Bollegala and
  Vincent Atanasov and
  Takanori Maehara and
  Ken{-}ichi Kawarabayashi},
  title = {ClassiNet - Predicting Missing Features for Short-Text Classification},
- journal = {{TKDD}},
+ journal = {ACM Transactions on Knowledge Discovery from Data},
  volume = {12},
  number = {5},
  pages = {55:1--55:29},
  year = {2018},
+ month = {July},
  url = {https://doi.org/10.1145/3201578},
 }
-@inproceedings{DBLP:conf/aaai/OsogamiRGSM18,
- author = {Takayuki Osogami and
- Rudy Raymond and
- Akshay Goel and
- Tomoyuki Shirai and
- Takanori Maehara},
+@inproceedings{osogami2018dynamic,
+ author = {Takayuki Osogami and Rudy Raymond and Akshay Goel and Tomoyuki Shirai and Takanori Maehara},
  title = {Dynamic Determinantal Point Processes},
- booktitle = {Proceedings of the Thirty-Second {AAAI} Conference on Artificial Intelligence,
- (AAAI-18), the 30th innovative Applications of Artificial Intelligence
- (IAAI-18), and the 8th {AAAI} Symposium on Educational Advances in
- Artificial Intelligence (EAAI-18), New Orleans, Louisiana, USA, February
+ booktitle = {Proceedings of the 32nd AAAI Conference on Artificial Intelligence (AAAI'18), the 30th innovative Applications of Artificial Intelligence (IAAI-18), and the 8th {AAAI} Symposium on Educational Advances in Artificial Intelligence (EAAI-18), New Orleans, Louisiana, USA, February
  2-7, 2018},
  pages = {3868--3875},
  year = {2018},
  url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16081},
 }
-@inproceedings{DBLP:conf/acssc/CoutinoIML18,
- author = {Mario Coutino and
- Elvin Isufi and
- Takanori Maehara and
- Geert Leus},
- title = {On The Limits of Finite-Time Distributed Consensus Through Successive
- Local Linear Operations},
- booktitle = {52nd Asilomar Conference on Signals, Systems, and Computers, {ACSSC}
- 2018, Pacific Grove, CA, USA, October 28-31, 2018},
+@conference{courtino2018limits,
+ author = {Mario Coutino and Elvin Isufi and Takanori Maehara and Geert Leus},
+ title = {On The Limits of Finite-Time Distributed Consensus Through Successive Local Linear Operations},
+ booktitle = {Proceedings of the 52nd Asilomar Conference on Signals, Systems, and Computers (ACSSC'18), 2018, Pacific Grove, CA, USA, October 28-31, 2018},
  pages = {993--997},
  year = {2018},
  url = {https://doi.org/10.1109/ACSSC.2018.8645186},
 }
-@inproceedings{DBLP:conf/aistats/ImaizumiMY18,
- author = {Masaaki Imaizumi and
- Takanori Maehara and
- Yuichi Yoshida},
+@inproceedings{imaizumi2018statistically,
+ author = {Masaaki Imaizumi and Takanori Maehara and Yuichi Yoshida},
  title = {Statistically Efficient Estimation for Non-Smooth Probability Densities},
- booktitle = {International Conference on Artificial Intelligence and Statistics,
- {AISTATS} 2018, 9-11 April 2018, Playa Blanca, Lanzarote, Canary Islands,
- Spain},
+ booktitle = {International Conference on Artificial Intelligence and Statistics (AISTATS'18), 9-11 April 2018, Playa Blanca, Lanzarote, Canary Islands, Spain},
  pages = {978--987},
  year = {2018},
  url = {http://proceedings.mlr.press/v84/imaizumi18a.html},
 }
-@inproceedings{DBLP:conf/icml/TaniaiM18,
- author = {Tatsunori Taniai and
- Takanori Maehara},
+@inproceedings{taniai2018neural,
+ author = {Tatsunori Taniai and Takanori Maehara},
  title = {Neural Inverse Rendering for General Reflectance Photometric Stereo},
- booktitle = {Proceedings of the 35th International Conference on Machine Learning,
- {ICML} 2018, Stockholmsm{\"{a}}ssan, Stockholm, Sweden, July
- 10-15, 2018},
+ booktitle = {Proceedings of the 35th International Conference on Machine Learning (ICML'18), Stockholmsm{\"{a}}ssan, Stockholm, Sweden, July 10-15, 2018},
  pages = {4864--4873},
  year = {2018},
  url = {http://proceedings.mlr.press/v80/taniai18a.html},
 }
-@inproceedings{DBLP:conf/ijcai/MaeharaNBK18,
- author = {Takanori Maehara and
- Atsuhiro Narita and
- Jun Baba and
- Takayuki Kawabata},
+@inproceedings{maehara2018optimal,
+ author = {Takanori Maehara and Atsuhiro Narita and Jun Baba and Takayuki Kawabata},
  title = {Optimal Bidding Strategy for Brand Advertising},
- booktitle = {Proceedings of the Twenty-Seventh International Joint Conference on
- Artificial Intelligence, {IJCAI} 2018, July 13-19, 2018, Stockholm,
- Sweden.},
+ booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence (IJCAI'18), July 13-19, 2018, Stockholm, Sweden.},
  pages = {424--432},
  year = {2018},
  url = {https://doi.org/10.24963/ijcai.2018/59},
 }
-@inproceedings{DBLP:conf/soda/YamaguchiM18,
- author = {Yutaro Yamaguchi and
- Takanori Maehara},
+@inproceedings{maehara2018stochastic,
+ author = {Takanori Maehara, Yutaro Yamaguchi},
  title = {Stochastic Packing Integer Programs with Few Queries},
- booktitle = {Proceedings of the Twenty-Ninth Annual {ACM-SIAM} Symposium on Discrete
- Algorithms, {SODA} 2018, New Orleans, LA, USA, January 7-10, 2018},
+ booktitle = {Proceedings of the Twenty-Ninth Annual {ACM-SIAM} Symposium on Discrete Algorithms (SODA'18), New Orleans, LA, USA, January 7-10, 2018},
  pages = {293--310},
  year = {2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
@@ -152,9 +122,8 @@
  year = {2018},
  url = {http://arxiv.org/abs/1807.04575},
 }
-@article{DBLP:journals/corr/abs-1810-01730,
- author = {Ben Chugg and
- Takanori Maehara},
+@article{ben2019submodular,
+ author = {Ben Chugg and Takanori Maehara},
  title = {Submodular Stochastic Probing with Prices},
  journal = {CoRR},
  volume = {abs/1810.01730},
@@ -294,57 +263,33 @@
  url = {https://doi.org/10.1007/s13278-016-0334-0},
 }
 @inproceedings{DBLP:conf/aaai/MaeharaHK16,
- author = {Takanori Maehara and
- Kohei Hayashi and
- Ken{-}ichi Kawarabayashi},
+ author = {Takanori Maehara and Kohei Hayashi and Ken{-}ichi Kawarabayashi},
  title = {Expected Tensor Decomposition with Stochastic Gradient Descent},
- booktitle = {Proceedings of the Thirtieth {AAAI} Conference on Artificial Intelligence,
- February 12-17, 2016, Phoenix, Arizona, {USA.}},
+ booktitle = {Proceedings of the 30th AAAI Conference on Artificial Intelligence (AAAI'16), February 12-17, 2016, Phoenix, Arizona, {USA.}},
  pages = {1919--1925},
  year = {2016},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12371},
 }
-@inproceedings{DBLP:conf/aaai/BollegalaAMK16,
- author = {Danushka Bollegala and
- Mohammed Alsuhaibani and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{bollegala2016joint,
+ author = {Danushka Bollegala and Mohammed Alsuhaibani and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Joint Word Representation Learning Using a Corpus and a Semantic Lexicon},
- booktitle = {Proceedings of the Thirtieth {AAAI} Conference on Artificial Intelligence,
- February 12-17, 2016, Phoenix, Arizona, {USA.}},
+ booktitle = {Proceedings of the 30th AAAI Conference on Artificial Intelligence (AAAI'16), February 12-17, 2016, Phoenix, Arizona, USA.},
  pages = {2690--2696},
  year = {2016},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/11855},
 }
-@inproceedings{DBLP:conf/cocoa/FukunagaM16,
- author = {Takuro Fukunaga and
- Takanori Maehara},
+@inproceedings{fukunaga2016computing,
+ author = {Takuro Fukunaga and Takanori Maehara},
  title = {Computing a Tree Having a Small Vertex Cover},
- booktitle = {Combinatorial Optimization and Applications - 10th International Conference,
- {COCOA} 2016, Hong Kong, China, December 16-18, 2016, Proceedings},
+ booktitle = {Proceedings of the 10th International Conference on Combinatorial Optimization and Applications (COCOA'16), Hong Kong, China, December 16-18, 2016, Proceedings},
  pages = {77--91},
  year = {2016},
  url = {https://doi.org/10.1007/978-3-319-48749-6\_6},
 }
-@article{DBLP:journals/corr/MaeharaKSTK16,
- author = {Takanori Maehara and
- Yasushi Kawase and
- Hanna Sumita and
- Katsuya Tono and
- Ken{-}ichi Kawarabayashi},
- title = {Optimal Pricing for Submodular Valuations with Bounded Curvature},
- journal = {CoRR},
- volume = {abs/1611.07605},
- year = {2016},
- url = {http://arxiv.org/abs/1611.07605},
- archivePrefix = {arXiv},
- eprint = {1611.07605},
-}
-@article{DBLP:journals/anor/MaeharaM15,
- author = {Takanori Maehara and
- Kazuo Murota},
+@article{maehara2015valuated,
+ author = {Takanori Maehara and Kazuo Murota},
  title = {Valuated matroid-based algorithm for submodular welfare problem},
- journal = {Annals {OR}},
+ journal = {Annals of Operations Research},
  volume = {229},
  number = {1},
  pages = {565--590},
@@ -360,245 +305,122 @@
  number = {1-2},
  pages = {435--466},
  year = {2015},
+ month = June,
  url = {https://doi.org/10.1007/s10107-014-0792-y},
 }
-@article{DBLP:journals/orl/Maehara15,
+@article{maehara2015,
  author = {Takanori Maehara},
  title = {Risk averse submodular utility maximization},
- journal = {Oper. Res. Lett.},
+ journal = {Operations Research Letters},
  volume = {43},
  number = {5},
  pages = {526--529},
  year = {2015},
+ month = {May},
  url = {https://doi.org/10.1016/j.orl.2015.08.001},
 }
-@inproceedings{DBLP:conf/aaai/HatanoFMK15,
- author = {Daisuke Hatano and
- Takuro Fukunaga and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{hatano2015lagrangian,
+ author = {Daisuke Hatano and Takuro Fukunaga and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Lagrangian Decomposition Algorithm for Allocating Marketing Channels},
- booktitle = {Proceedings of the Twenty-Ninth {AAAI} Conference on Artificial Intelligence,
- January 25-30, 2015, Austin, Texas, {USA.}},
+ booktitle = {Proceedings of the 29th AAAI Conference on Artificial Intelligence (AAAI'15), January 25-30, 2015, Austin, Texas, USA.},
  pages = {1144--1150},
  year = {2015},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9326},
 }
-@inproceedings{DBLP:conf/aaai/BollegalaMYK15,
- author = {Danushka Bollegala and
- Takanori Maehara and
- Yuichi Yoshida and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{bollegala2015learning,
+ author = {Danushka Bollegala and Takanori Maehara and Yuichi Yoshida and Ken{-}ichi Kawarabayashi},
  title = {Learning Word Representations from Relational Graphs},
- booktitle = {Proceedings of the Twenty-Ninth {AAAI} Conference on Artificial Intelligence,
- January 25-30, 2015, Austin, Texas, {USA.}},
+ booktitle = {Proceedings of the Twenty-Ninth AAAI Conference on Artificial Intelligence (AAAI'15), January 25-30, 2015, Austin, Texas, {USA.}},
  pages = {2146--2152},
  year = {2015},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9717},
 }
-@inproceedings{DBLP:conf/acl/BollegalaMK15,
- author = {Danushka Bollegala and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{bollegala2015unsupervised,
+ author = {Danushka Bollegala and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Unsupervised Cross-Domain Word Representation Learning},
- booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational
- Linguistics and the 7th International Joint Conference on Natural
- Language Processing of the Asian Federation of Natural Language Processing,
- {ACL} 2015, July 26-31, 2015, Beijing, China, Volume 1: Long Papers},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics (ACL'19), July 26-31, 2015, Beijing, China},
  pages = {730--740},
  year = {2015},
  url = {http://aclweb.org/anthology/P/P15/P15-1071.pdf},
 }
-@inproceedings{DBLP:conf/icde/MaeharaKK15,
- author = {Takanori Maehara and
- Mitsuru Kusumoto and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{maehara2015scalable,
+ author = {Takanori Maehara and Mitsuru Kusumoto and Ken{-}ichi Kawarabayashi},
  title = {Scalable SimRank join algorithm},
- booktitle = {31st {IEEE} International Conference on Data Engineering, {ICDE} 2015,
- Seoul, South Korea, April 13-17, 2015},
+ booktitle = {Proceedings of the 31st IEEE International Conference on Data Engineering (ICDE'15), Seoul, South Korea, April 13-17, 2015},
  pages = {603--614},
  year = {2015},
  url = {https://doi.org/10.1109/ICDE.2015.7113318},
 }
-@inproceedings{DBLP:conf/icml/MaeharaYK15,
- author = {Takanori Maehara and
- Akihiro Yabe and
- Ken{-}ichi Kawarabayashi},
- title = {Budget Allocation Problem with Multiple Advertisers: {A} Game Theoretic
- View},
- booktitle = {Proceedings of the 32nd International Conference on Machine Learning,
- {ICML} 2015, Lille, France, 6-11 July 2015},
+@inproceedings{maehara2015budget,
+ author = {Takanori Maehara and Akihiro Yabe and Ken{-}ichi Kawarabayashi},
+ title = {Budget Allocation Problem with Multiple Advertisers: {A} Game Theoretic View},
+ booktitle = {Proceedings of the 32nd International Conference on Machine Learning (ICML'15), Lille, France, 6-11 July 2015},
  pages = {428--437},
  year = {2015},
  url = {http://jmlr.org/proceedings/papers/v37/maehara15.html},
 }
-@inproceedings{DBLP:conf/ijcai/BollegalaMK15,
- author = {Danushka Bollegala and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{bollegala2015embedding,
+ author = {Danushka Bollegala and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Embedding Semantic Relations into Word Representations},
- booktitle = {Proceedings of the Twenty-Fourth International Joint Conference on
- Artificial Intelligence, {IJCAI} 2015, Buenos Aires, Argentina, July
+ booktitle = {Proceedings of the 24th International Joint Conference on Artificial Intelligence (IJCAI'15), Buenos Aires, Argentina, July
  25-31, 2015},
  pages = {1222--1228},
  year = {2015},
  url = {http://ijcai.org/Abstract/15/176},
 }
-@inproceedings{DBLP:conf/kdd/HayashiMTK15,
- author = {Kohei Hayashi and
- Takanori Maehara and
- Masashi Toyoda and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{hayashi2015real,
+ author = {Kohei Hayashi and Takanori Maehara and Masashi Toyoda and Ken{-}ichi Kawarabayashi},
  title = {Real-Time Top-R Topic Detection on Twitter with Topic Hijack Filtering},
- booktitle = {Proceedings of the 21th {ACM} {SIGKDD} International Conference on
- Knowledge Discovery and Data Mining, Sydney, NSW, Australia, August
- 10-13, 2015},
+ booktitle = {Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD'15), Sydney, NSW, Australia, August 10-13, 2015},
  pages = {417--426},
  year = {2015},
  url = {https://doi.org/10.1145/2783258.2783402},
 }
-@inproceedings{DBLP:conf/kdd/OhsakaMK15,
- author = {Naoto Ohsaka and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{ohsaka2015efficient,
+ author = {Naoto Ohsaka and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Efficient PageRank Tracking in Evolving Networks},
- booktitle = {Proceedings of the 21th {ACM} {SIGKDD} International Conference on
- Knowledge Discovery and Data Mining, Sydney, NSW, Australia, August
- 10-13, 2015},
+ booktitle = {Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD'159, Sydney, NSW, Australia, August 10-13, 2015},
  pages = {875--884},
  year = {2015},
  url = {https://doi.org/10.1145/2783258.2783297},
 }
-@inproceedings{DBLP:conf/mco/MaeharaMM15,
- author = {Takanori Maehara and
- Naoki Marumo and
- Kazuo Murota},
+@inproceedings{maehara2015continuous,
+ author = {Takanori Maehara and Naoki Marumo and Kazuo Murota},
  title = {Continuous Relaxation for Discrete {DC} Programming},
- booktitle = {Modelling, Computation and Optimization in Information Systems and
- Management Sciences - Proceedings of the 3rd International Conference
- on Modelling, Computation and Optimization in Information Systems
- and Management Sciences - {MCO} 2015, Metz, France, May 11-13, 2015,
- Part {I}},
+ booktitle = {Proceedings of the 3rd International Conference on Modelling, Computation and Optimization in Information Systems and Management Sciences (MCO'15), Metz, France, May 11-13, 2015},
  pages = {181--190},
  year = {2015},
  url = {https://doi.org/10.1007/978-3-319-18161-5\_16},
 }
-@inproceedings{DBLP:conf/networking/KawaseMK15,
- author = {Yasushi Kawase and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{kawase2015scalable,
+ author = {Yasushi Kawase and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Scalable sensor localization via ball-decomposition algorithm},
- booktitle = {Proceedings of the 14th {IFIP} Networking Conference, Networking 2015,
- Toulouse, France, 20-22 May, 2015},
+ booktitle = {Proceedings of the 14th IFIP Networking Conference (Networking'15), Toulouse, France, 20-22 May, 2015},
  pages = {1--9},
  year = {2015},
  url = {https://doi.org/10.1109/IFIPNetworking.2015.7145331},
 }
-@article{DBLP:journals/corr/BollegalaMK15,
- author = {Danushka Bollegala and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
- title = {Embedding Semantic Relations into Word Representations},
- journal = {CoRR},
- volume = {abs/1505.00161},
- year = {2015},
- url = {http://arxiv.org/abs/1505.00161},
- archivePrefix = {arXiv},
- eprint = {1505.00161},
-}
-@article{DBLP:journals/corr/BollegalaMK15a,
- author = {Danushka Bollegala and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
- title = {Unsupervised Cross-Domain Word Representation Learning},
- journal = {CoRR},
- volume = {abs/1505.07184},
- year = {2015},
- url = {http://arxiv.org/abs/1505.07184},
- archivePrefix = {arXiv},
- eprint = {1505.07184},
-}
-@article{DBLP:journals/corr/BollegalaMMK15,
- author = {Danushka Bollegala and
- Mohammed Alsuhaibani and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
- title = {Joint Word Representation Learning using a Corpus and a Semantic Lexicon},
- journal = {CoRR},
- volume = {abs/1511.06438},
- year = {2015},
- url = {http://arxiv.org/abs/1511.06438},
- archivePrefix = {arXiv},
- eprint = {1511.06438},
-}
-@article{DBLP:journals/pvldb/MaeharaAIK14,
- author = {Takanori Maehara and
- Takuya Akiba and
- Yoichi Iwata and
- Ken{-}ichi Kawarabayashi},
- title = {Computing Personalized PageRank Quickly by Exploiting Graph Structures},
- journal = {{PVLDB}},
+@inproceedings{maehara2014computing,
+ author = {Takanori Maehara and Takuya Akiba and Yoichi Iwata and Ken{-}ichi Kawarabayashi},
+ title = {Proceedings of the 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014}
+   Computing Personalized PageRank Quickly by Exploiting Graph Structures},
+ journal = {PVLDB},
  volume = {7},
  number = {12},
  pages = {1023--1034},
  year = {2014},
  url = {http://www.vldb.org/pvldb/vol7/p1023-maehara.pdf},
 }
-@inproceedings{DBLP:conf/kdd/MaeharaKK14,
- author = {Takanori Maehara and
- Mitsuru Kusumoto and
- Ken{-}ichi Kawarabayashi},
- title = {Efficient SimRank computation via linearizationPublication of this
- article pending inquiry},
- booktitle = {The 20th {ACM} {SIGKDD} International Conference on Knowledge Discovery
- and Data Mining, {KDD} '14, New York, NY, {USA} - August 24 - 27,
- 2014},
- pages = {1426--1435},
- year = {2014},
- url = {https://doi.org/10.1145/2623330.2623696},
-}
-@inproceedings{DBLP:conf/kdd/AkibaMK14,
- author = {Takuya Akiba and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
- title = {Network structural analysis via core-tree-decomposition Publication
- of this article pending inquiry},
- booktitle = {The 20th {ACM} {SIGKDD} International Conference on Knowledge Discovery
- and Data Mining, {KDD} '14, New York, NY, {USA} - August 24 - 27,
- 2014},
- pages = {1476--1485},
- year = {2014},
- url = {https://doi.org/10.1145/2623330.2623753},
-}
-@inproceedings{DBLP:conf/sigmod/KusumotoMK14,
- author = {Mitsuru Kusumoto and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{kusumoto2014scalable,
+ author = {Mitsuru Kusumoto and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Scalable similarity search for SimRank},
- booktitle = {International Conference on Management of Data, {SIGMOD} 2014, Snowbird,
- UT, USA, June 22-27, 2014},
+ booktitle = {Proceedings of the 2014 ACM SIGMOD International Conference on Management of Data (SIGMOD'14), Snowbird, UT, USA, June 22-27, 2014},
  pages = {325--336},
  year = {2014},
  url = {https://doi.org/10.1145/2588555.2610526},
 }
-@article{DBLP:journals/corr/TakaguchiMTK14,
- author = {Taro Takaguchi and
- Takanori Maehara and
- Masashi Toyoda and
- Ken{-}ichi Kawarabayashi},
- title = {Existence of outsiders as a characteristic of online communication
- networks},
- journal = {CoRR},
- volume = {abs/1411.7091},
- year = {2014},
- url = {http://arxiv.org/abs/1411.7091},
- archivePrefix = {arXiv},
- eprint = {1411.7091},
-}
-@article{DBLP:journals/corr/MaeharaKK14,
- author = {Takanori Maehara and
- Mitsuru Kusumoto and
- Ken{-}ichi Kawarabayashi},
+@article{maehara2014efficient,
+ author = {Takanori Maehara and Mitsuru Kusumoto and Ken{-}ichi Kawarabayashi},
  title = {Efficient SimRank Computation via Linearization},
  journal = {CoRR},
  volume = {abs/1411.7228},
@@ -607,39 +429,21 @@
  archivePrefix = {arXiv},
  eprint = {1411.7228},
 }
-@article{DBLP:journals/corr/BollegalaMYK14,
- author = {Danushka Bollegala and
- Takanori Maehara and
- Yuichi Yoshida and
- Ken{-}ichi Kawarabayashi},
- title = {Learning Word Representations from Relational Graphs},
- journal = {CoRR},
- volume = {abs/1412.2378},
- year = {2014},
- url = {http://arxiv.org/abs/1412.2378},
- archivePrefix = {arXiv},
- eprint = {1412.2378},
-}
-@article{DBLP:journals/siammax/MaeharaM11,
- author = {Takanori Maehara and
- Kazuo Murota},
- title = {Algorithm for Error-Controlled Simultaneous Block-Diagonalization
- of Matrices},
- journal = {{SIAM} J. Matrix Analysis Applications},
+@article{maehara2011algorithm,
+ author = {Takanori Maehara and Kazuo Murota},
+ title = {Algorithm for Error-Controlled Simultaneous Block-Diagonalization of Matrices},
+ journal = {SIAM Journal on Matrix Analysis Applications},
  volume = {32},
  number = {2},
  pages = {605--620},
  year = {2011},
+ month = {June},
  url = {https://doi.org/10.1137/090779966},
 }
-@inproceedings{DBLP:conf/ica/GutchMT10,
- author = {Harold W. Gutch and
- Takanori Maehara and
- Fabian J. Theis},
+@inproceedings{gutch2010second,
+ author = {Harold W. Gutch and Takanori Maehara and Fabian J. Theis},
  title = {Second Order Subspace Analysis and Simple Decompositions},
- booktitle = {Latent Variable Analysis and Signal Separation - 9th International
- Conference, {LVA/ICA} 2010, St. Malo, France, September 27-30, 2010.
- Proceedings},
+ booktitle = {Proceedings of the 9th International Conference on Latent Variable Analysis and Signal Separation (LVA/ICA'10), St. Malo, France, September 27-30, 2010.},
  pages = {370--377},
  year = {2010},
  url = {https://doi.org/10.1007/978-3-642-15995-4\_46},
