--- a/maehara.bib
+++ b/maehara.bib
@@ -1,4 +1,5 @@
-@inproceedings{kumabe2019linear,
+
+@conference{kumabe2019linear,
  author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
  title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
  booktitle = {13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019, Proceedings},
@@ -33,7 +34,7 @@
  month = {December},
  url = {https://doi.org/10.1017/nws.2018.17},
 }
-@conference{courtino2018limits,
+@inproceedings{courtino2018limits,
  author = {Mario Coutino and Elvin Isufi and Takanori Maehara and Geert Leus},
  title = {On The Limits of Finite-Time Distributed Consensus Through Successive Local Linear Operations},
  booktitle = {Proceedings of the 52nd Asilomar Conference on Signals, Systems, and Computers (ACSSC'18), Pacific Grove, CA, USA, October 28-31, 2018},
@@ -52,7 +53,7 @@
  month = {July},
  url = {https://doi.org/10.1145/3201578},
 }
-@inproceedings{taniai2018neural,
+@conference{taniai2018neural,
  author = {Tatsunori Taniai and Takanori Maehara},
  title = {Neural Inverse Rendering for General Reflectance Photometric Stereo},
  booktitle = {Proceedings of the 35th International Conference on Machine Learning (ICML'18), Stockholm, Sweden, July 10-15, 2018},
@@ -60,7 +61,7 @@
  year = {2018},
  url = {http://proceedings.mlr.press/v80/taniai18a.html},
 }
-@inproceedings{maehara2018optimal,
+@conference{maehara2018optimal,
  author = {Takanori Maehara and Atsuhiro Narita and Jun Baba and Takayuki Kawabata},
  title = {Optimal Bidding Strategy for Brand Advertising},
  booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence (IJCAI'18), Stockholm, Sweden, July 13-19, 2018},
@@ -79,7 +80,7 @@
  month = {April 15},
  url = {https://doi.org/10.1007/s10107-017-1139-2},
 }
-@inproceedings{imaizumi2018statistically,
+@conference{imaizumi2018statistically,
  author = {Masaaki Imaizumi and Takanori Maehara and Yuichi Yoshida},
  title = {Statistically Efficient Estimation for Non-Smooth Probability Densities},
  booktitle = {International Conference on Artificial Intelligence and Statistics (AISTATS'18), Playa Blanca, Lanzarote, Canary Islands, Spain, 9-11 April 2018},
@@ -98,7 +99,7 @@
   month = {February 23},
   url = {https://doi.org/10.1103/PhysRevE.97.022138},
 }
-@inproceedings{osogami2018dynamic,
+@conference{osogami2018dynamic,
  author = {Takayuki Osogami and Rudy Raymond and Akshay Goel and Tomoyuki Shirai and Takanori Maehara},
  title = {Dynamic Determinantal Point Processes},
  booktitle = {Proceedings of the 32nd AAAI Conference on Artificial Intelligence (AAAI'18), New Orleans, Louisiana, USA., February 2-7, 2018},
@@ -106,7 +107,7 @@
  year = {2018},
  url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16081},
 }
-@inproceedings{maehara2018stochastic,
+@conference{maehara2018stochastic,
  author = {Takanori Maehara, Yutaro Yamaguchi},
  title = {Stochastic Packing Integer Programs with Few Queries},
  booktitle = {Proceedings of the Twenty-Ninth Annual {ACM-SIAM} Symposium on Discrete Algorithms (SODA'18), New Orleans, LA, USA, January 7-10, 2018},
@@ -155,7 +156,7 @@
  year = {2018},
  url = {http://arxiv.org/abs/1810.05992},
 }
-@inproceedings{maehara2017optimal,
+@conference{maehara2017optimal,
  author = {Takanori Maehara and Yasushi Kawase and Hanna Sumita and Katsuya Tono and Ken{-}ichi Kawarabayashi},
  title = {Optimal Pricing for Submodular Valuations with Bounded Curvature},
  booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence, February 4-9, 2017, San Francisco, California, USA.},
@@ -163,7 +164,7 @@
  year = {2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14562},
 }
-@inproceedings{hara2017enumerate,
+@conference{hara2017enumerate,
  author = {Satoshi Hara and Takanori Maehara},
  title = {Enumerate Lasso Solutions for Feature Selection},
  booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence, February 4-9, 2017, San Francisco, California, USA.},
@@ -171,7 +172,7 @@
  year = {2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14304},
 }
-@inproceedings{hatano2017scalable,
+@conference{hatano2017scalable,
  author = {Daisuke Hatano and Takuro Fukunaga and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Scalable Algorithm for Higher-Order Co-Clustering via Random Sampling},
  booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence (AAAI'17), February 4-9, 2017, San Francisco, California, {USA.}},
@@ -179,7 +180,7 @@
  year = {2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14850},
 }
-@inproceedings{imaizumi2017tensor,
+@conference{imaizumi2017tensor,
  author = {Masaaki Imaizumi and Takanori Maehara and Kohei Hayashi},
  title = {On Tensor Train Rank Minimization : Statistical Efficiency and Scalable Algorithm},
  booktitle = {Proceedings of the 30th Annual Conference on Neural Information Processing Systems (NIPS'17), December 4-9 2017, Long Beach, CA, {USA}},
@@ -187,7 +188,7 @@
  year = {2017},
  url = {http://papers.nips.cc/paper/6982-on-tensor-train-rank-minimization-statistical-efficiency-and-scalable-algorithm},
 }
-@inproceedings{maehara2017exact,
+@conference{maehara2017exact,
  author = {Takanori Maehara and Hirofumi Suzuki and Masakazu Ishihata},
  title = {Exact Computation of Influence Spread by Binary Decision Diagrams},
  booktitle = {Proceedings of the 26th International Conference on World Wide Web (WWW'17), Perth, Australia, April 3-7, 2017},
@@ -206,7 +207,7 @@
  month = {December},
  url = {https://doi.org/10.1007/s13278-016-0334-0},
 }
-@inproceedings{maehara2016expected,
+@conference{maehara2016expected,
  author = {Takanori Maehara and Kohei Hayashi and Ken{-}ichi Kawarabayashi},
  title = {Expected Tensor Decomposition with Stochastic Gradient Descent},
  booktitle = {Proceedings of the 30th AAAI Conference on Artificial Intelligence (AAAI'16), February 12-17, 2016, Phoenix, Arizona, {USA.}},
@@ -214,7 +215,7 @@
  year = {2016},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12371},
 }
-@inproceedings{bollegala2016joint,
+@conference{bollegala2016joint,
  author = {Danushka Bollegala and Mohammed Alsuhaibani and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Joint Word Representation Learning Using a Corpus and a Semantic Lexicon},
  booktitle = {Proceedings of the 30th AAAI Conference on Artificial Intelligence (AAAI'16), February 12-17, 2016, Phoenix, Arizona, USA.},
@@ -222,7 +223,7 @@
  year = {2016},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/11855},
 }
-@inproceedings{fukunaga2016computing,
+@conference{fukunaga2016computing,
  author = {Takuro Fukunaga and Takanori Maehara},
  title = {Computing a Tree Having a Small Vertex Cover},
  booktitle = {Proceedings of the 10th International Conference on Combinatorial Optimization and Applications (COCOA'16), Hong Kong, China, December 16-18, 2016, Proceedings},
@@ -263,7 +264,7 @@
  month = {May},
  url = {https://doi.org/10.1016/j.orl.2015.08.001},
 }
-@inproceedings{hatano2015lagrangian,
+@conference{hatano2015lagrangian,
  author = {Daisuke Hatano and Takuro Fukunaga and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Lagrangian Decomposition Algorithm for Allocating Marketing Channels},
  booktitle = {Proceedings of the 29th AAAI Conference on Artificial Intelligence (AAAI'15), January 25-30, 2015, Austin, Texas, USA.},
@@ -271,7 +272,7 @@
  year = {2015},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9326},
 }
-@inproceedings{bollegala2015learning,
+@conference{bollegala2015learning,
  author = {Danushka Bollegala and Takanori Maehara and Yuichi Yoshida and Ken{-}ichi Kawarabayashi},
  title = {Learning Word Representations from Relational Graphs},
  booktitle = {Proceedings of the Twenty-Ninth AAAI Conference on Artificial Intelligence (AAAI'15), January 25-30, 2015, Austin, Texas, {USA.}},
@@ -279,7 +280,7 @@
  year = {2015},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9717},
 }
-@inproceedings{bollegala2015unsupervised,
+@conference{bollegala2015unsupervised,
  author = {Danushka Bollegala and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Unsupervised Cross-Domain Word Representation Learning},
  booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics (ACL'19), July 26-31, 2015, Beijing, China},
@@ -287,7 +288,7 @@
  year = {2015},
  url = {http://aclweb.org/anthology/P/P15/P15-1071.pdf},
 }
-@inproceedings{maehara2015scalable,
+@conference{maehara2015scalable,
  author = {Takanori Maehara and Mitsuru Kusumoto and Ken{-}ichi Kawarabayashi},
  title = {Scalable SimRank join algorithm},
  booktitle = {Proceedings of the 31st IEEE International Conference on Data Engineering (ICDE'15), Seoul, South Korea, April 13-17, 2015},
@@ -295,7 +296,7 @@
  year = {2015},
  url = {https://doi.org/10.1109/ICDE.2015.7113318},
 }
-@inproceedings{maehara2015budget,
+@conference{maehara2015budget,
  author = {Takanori Maehara and Akihiro Yabe and Ken{-}ichi Kawarabayashi},
  title = {Budget Allocation Problem with Multiple Advertisers: {A} Game Theoretic View},
  booktitle = {Proceedings of the 32nd International Conference on Machine Learning (ICML'15), Lille, France, 6-11 July 2015},
@@ -303,7 +304,7 @@
  year = {2015},
  url = {http://jmlr.org/proceedings/papers/v37/maehara15.html},
 }
-@inproceedings{bollegala2015embedding,
+@conference{bollegala2015embedding,
  author = {Danushka Bollegala and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Embedding Semantic Relations into Word Representations},
  booktitle = {Proceedings of the 24th International Joint Conference on Artificial Intelligence (IJCAI'15), Buenos Aires, Argentina, July
@@ -312,7 +313,7 @@
  year = {2015},
  url = {http://ijcai.org/Abstract/15/176},
 }
-@inproceedings{hayashi2015real,
+@conference{hayashi2015real,
  author = {Kohei Hayashi and Takanori Maehara and Masashi Toyoda and Ken{-}ichi Kawarabayashi},
  title = {Real-Time Top-R Topic Detection on Twitter with Topic Hijack Filtering},
  booktitle = {Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD'15), Sydney, NSW, Australia, August 10-13, 2015},
@@ -320,7 +321,7 @@
  year = {2015},
  url = {https://doi.org/10.1145/2783258.2783402},
 }
-@inproceedings{ohsaka2015efficient,
+@conference{ohsaka2015efficient,
  author = {Naoto Ohsaka and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Efficient PageRank Tracking in Evolving Networks},
  booktitle = {Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD'159, Sydney, NSW, Australia, August 10-13, 2015},
@@ -328,7 +329,7 @@
  year = {2015},
  url = {https://doi.org/10.1145/2783258.2783297},
 }
-@inproceedings{maehara2015continuous,
+@conference{maehara2015continuous,
  author = {Takanori Maehara and Naoki Marumo and Kazuo Murota},
  title = {Continuous Relaxation for Discrete {DC} Programming},
  booktitle = {Proceedings of the 3rd International Conference on Modelling, Computation and Optimization in Information Systems and Management Sciences (MCO'15), Metz, France, May 11-13, 2015},
@@ -336,7 +337,7 @@
  year = {2015},
  url = {https://doi.org/10.1007/978-3-319-18161-5\_16},
 }
-@inproceedings{kawase2015scalable,
+@conference{kawase2015scalable,
  author = {Yasushi Kawase and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Scalable sensor localization via ball-decomposition algorithm},
  booktitle = {Proceedings of the 14th IFIP Networking Conference (Networking'15), Toulouse, France, 20-22 May, 2015},
@@ -344,7 +345,7 @@
  year = {2015},
  url = {https://doi.org/10.1109/IFIPNetworking.2015.7145331},
 }
-@inproceedings{maehara2014computing,
+@conference{maehara2014computing,
  author = {Takanori Maehara and Takuya Akiba and Yoichi Iwata and Ken{-}ichi Kawarabayashi},
  title = {Computing Personalized PageRank Quickly by Exploiting Graph Structures},
  journal = {Proceedings of the 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014},
@@ -354,7 +355,7 @@
  year = {2014},
  url = {http://www.vldb.org/pvldb/vol7/p1023-maehara.pdf},
 }
-@inproceedings{kusumoto2014scalable,
+@conference{kusumoto2014scalable,
  author = {Mitsuru Kusumoto and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Scalable similarity search for SimRank},
  booktitle = {Proceedings of the 2014 ACM SIGMOD International Conference on Management of Data (SIGMOD'14), Snowbird, UT, USA, June 22-27, 2014},
@@ -382,7 +383,7 @@
  month = {June},
  url = {https://doi.org/10.1137/090779966},
 }
-@inproceedings{gutch2010second,
+@conference{gutch2010second,
  author = {Harold W. Gutch and Takanori Maehara and Fabian J. Theis},
  title = {Second Order Subspace Analysis and Simple Decompositions},
  booktitle = {Proceedings of the 9th International Conference on Latent Variable Analysis and Signal Separation (LVA/ICA'10), St. Malo, France, September 27-30, 2010.},
